--- a/Lawyer/BE/BE.csproj
+++ b/Lawyer/BE/BE.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,7 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="legislation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QandA.cs" />
+    <Compile Include="Section.cs" />
+    <Compile Include="Term.cs" />
+    <Compile Include="Verdict.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
