--- a/Lawyer/BE/BE.csproj
+++ b/Lawyer/BE/BE.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums.cs" />
     <Compile Include="legislation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QandA.cs" />
