--- a/Lawyer/Lawyer/Web.config
+++ b/Lawyer/Lawyer/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,14 +9,10 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
   <connectionStrings>
-    <add name="legislationContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=legislationContext-20201110171651; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|legislationContext-20201110171651.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="QandAContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=QandAContext-20201110171739; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|QandAContext-20201110171739.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="TermContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=TermContext-20201110171814; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TermContext-20201110171814.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="VerdictContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=VerdictContext-20201110171839; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|VerdictContext-20201110171839.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="legislationContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=legislationContext-20201110171651; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|legislationContext-20201110171651.mdf" providerName="System.Data.SqlClient" />
+    <add name="QandAContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=QandAContext-20201110171739; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|QandAContext-20201110171739.mdf" providerName="System.Data.SqlClient" />
+    <!--<add name="TermContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=TermContext-20201110171814; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TermContext-20201110171814.mdf" providerName="System.Data.SqlClient" />-->
+    <add name="VerdictContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=VerdictContext-20201110171839; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|VerdictContext-20201110171839.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
